[workspace]
members = [
	"consensus",
	"network",
	"runtime",
	"test/runtime",
	"test/client",
	"test/parachain/runtime",
	"test/parachain/",
	"test/parachain-zero",
	"test/parachain-zero/runtime",
	"test/parachain-one",
	"test/parachain-one/runtime",
	"test/parachain-two",
	"test/parachain-two/runtime",
]

[profile.release]
panic = 'unwind'
