[workspace]
members = [
	"consensus",
	"network",
	"runtime",
	"test/runtime",
	"test/client",
	"test/parachain/runtime",
	"test/parachain/",
	"parachain-zero",
	"parachain-zero/runtime",
	"parachain-one",
	"parachain-one/runtime",
	"parachain-two",
	"parachain-two/runtime",
]

[profile.release]
panic = 'unwind'
